--- a/project/index.html
+++ b/project/index.html
@@ -10,6 +10,6 @@
 <body>
 <h1>Project</h1>
 <a href="https://maxime-tamburrini.com"> Go to home page</a>
-<a href="oc_projet_2/">P2</a>
+<a href="oc_projet_2">P2</a>
 </body>
 </html>
