--- a/project/oc_projet_2/index.html
+++ b/project/oc_projet_2/index.html
@@ -46,7 +46,7 @@
     <img
             class="navigation--logo"
             alt="Booki, page d'accueil"
-            src="./assets/logo/Booki.png"
+            src="assets/logo/Booki.png"
     />
     <ul class="navigation--items">
       <li>
@@ -138,7 +138,7 @@
             <header class="card-header">
               <img
                       alt="Auberge la Cannebière"
-                      src="./assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                      src="assets/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
               />
             </header>
             <article class="card-content">
@@ -162,7 +162,7 @@
             <header class="card-header">
               <img
                       alt="Hôtel du port"
-                      src="./assets/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                      src="assets/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
               />
             </header>
             <article class="card-content">
@@ -186,7 +186,7 @@
             <header class="card-header">
               <img
                       alt="Hôtel les mouettes"
-                      src="./assets/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                      src="assets/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
               />
             </header>
             <article class="card-content">
@@ -210,7 +210,7 @@
             <header class="card-header">
               <img
                       alt="Hôtel de la mer"
-                      src="./assets/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                      src="assets/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
               />
             </header>
             <article class="card-content">
@@ -234,7 +234,7 @@
             <header class="card-header">
               <img
                       alt="Auberge Le Panier"
-                      src="./assets/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg "
+                      src="assets/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg "
               />
             </header>
             <article class="card-content">
@@ -258,7 +258,7 @@
             <header class="card-header">
               <img
                       alt="Hôtel chez Amina"
-                      src="./assets/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                      src="assets/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
               />
             </header>
             <article class="card-content">
@@ -293,7 +293,7 @@
             <header class="card-header">
               <img
                       alt="Hôtel le soleil du matin"
-                      src="./assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                      src="assets/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
               />
             </header>
             <article class="card-content">
@@ -314,7 +314,7 @@
             <header class="card-header">
               <img
                       alt="Au cœur de l'eau Chambres d'hôtes"
-                      src="./assets/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                      src="assets/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
               />
             </header>
             <article class="card-content">
@@ -335,7 +335,7 @@
             <header class="card-header">
               <img
                       alt="Hôtel Tout bleu et Blanc"
-                      src="./assets/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                      src="assets/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
               />
             </header>
             <article class="card-content">
@@ -366,7 +366,7 @@
           <header class="card-header">
             <img
                     alt="Vieux Port"
-                    src="./assets/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                    src="assets/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
             />
           </header>
           <article class="card-content">
@@ -379,7 +379,7 @@
           <header class="card-header">
             <img
                     alt="Fort de Pomègues"
-                    src="./assets/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                    src="assets/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
             />
           </header>
           <article class="card-content">
@@ -392,7 +392,7 @@
           <header class="card-header">
             <img
                     alt="Îles de Frioul"
-                    src="./assets/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                    src="assets/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
             />
           </header>
           <article class="card-content">
@@ -405,7 +405,7 @@
           <header class="card-header">
             <img
                     alt="Parc National des Calanques"
-                    src="./assets/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                    src="assets/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
             />
           </header>
           <article class="card-content">
@@ -418,7 +418,7 @@
           <header class="card-header">
             <img
                     alt="Notre-Dame-de-la-Garde"
-                    src="./assets/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                    src="assets/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
             />
           </header>
           <article class="card-content">
@@ -431,7 +431,7 @@
           <header class="card-header">
             <img
                     alt="Parc Longchamps"
-                    src="./assets/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                    src="assets/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
             />
           </header>
           <article class="card-content">
