update links with p3 and p4

--- a/project/index.html
+++ b/project/index.html
@@ -11,5 +11,7 @@
 <h1>Project</h1>
 <a href="https://maxime-tamburrini.com"> Go to home page</a>
 <a href="oc_projet_2/">P2</a>
+<a href="https://maxiim3.github.io">P3</a>
+<a href="oc_projet_2/">P4</a>
 </body>
 </html>
