--- a/project/index.html
+++ b/project/index.html
@@ -12,6 +12,6 @@
 <a href="https://maxime-tamburrini.com"> Go to home page</a>
 <a href="oc_projet_2/">P2</a>
 <a href="https://maxiim3.github.io">P3</a>
-<a href="oc_projet_4/">P4</a>
+<a href="oc_projet_4/starterOnly">P4</a>
 </body>
 </html>
