add link to P6 and p7

--- a/project/index.html
+++ b/project/index.html
@@ -13,5 +13,8 @@
 <a href="oc_projet_2/">P2</a>
 <a href="https://maxiim3.github.io">P3</a>
 <a href="oc_projet_4/starterOnly">P4</a>
+<a href="oc_projet_6/">P6</a>
+<a href="oc_projet_7/">P7</a>
+
 </body>
 </html>
